--- a/deploy/aws-deployment-config.yml
+++ b/deploy/aws-deployment-config.yml
@@ -23,14 +23,14 @@ environment_variables:
   # Database Connection - PRODUCTION
   DATABASE_URL: "postgresql://postgres.mmrzpngugivxoapjiovb:xuoO4|LSaaGX5@aws-0-eu-central-1.pooler.supabase.com:6543/postgres"
 
-  # Supabase Configuration
-  SUPABASE_URL: "https://mmrzpngugivxoapjiovb.supabase.co"
-  SUPABASE_SERVICE_KEY: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1tcnpwbmd1Z2l2eG9hcGppb3ZiIiwicm9sZSI6InNlcnZpY2Vfcm9sZSIsImlhdCI6MTc1MTg4NDQzOSwiZXhwIjoyMDY3NDYwNDM5fQ.KZhEDiqQCW2s0Yfyw3LrWYLXUz_6tLb_33qvxQ0uMQo"
+  # Supabase Configuration - Use environment variables from GitHub secrets
+  SUPABASE_URL: "${SUPABASE_URL}"
+  SUPABASE_SERVICE_KEY: "${SUPABASE_SERVICE_KEY}"
 
-  # Telegram Bot Configuration
-  TELEGRAM_BOT_TOKEN: "7981950009:AAE-nZH3lutwl6mqJrUopt7jkYGAfjkg7_U"
-  TELEGRAM_BOT_USERNAME: "your_bot_username"
-  TELEGRAM_ADMIN_ID: "391490"
+  # Telegram Bot Configuration - Use environment variables from GitHub secrets
+  TELEGRAM_BOT_TOKEN: "${TELEGRAM_BOT_TOKEN}"
+  TELEGRAM_BOT_USERNAME: "${TELEGRAM_BOT_USERNAME}"
+  TELEGRAM_ADMIN_ID: "${TELEGRAM_ADMIN_ID}"
 
 # Deployment Hooks
 hooks:
